(chore) card 215, added a few styles for the main theme to prevent collapsing margins

--- a/assets/css/common/containers.scss
+++ b/assets/css/common/containers.scss
@@ -83,7 +83,7 @@
   &:before,
   &:after {
     content: "";
-    display: block;
+    display: table;
     clear: both;
   }
 }
