--- a/assets/css/partials/homepage.scss
+++ b/assets/css/partials/homepage.scss
@@ -276,3 +276,10 @@ hr {
     @include line-height(20 / 16, 20 / 16);
   }
 }
+
+body.home.root {
+
+  .blogs-list {
+    padding-bottom: $gutter;
+  }
+}
